Solve multiple reflective hacks breaking initialization and more
* Stop injecting maps into the plugin manager. Disable these
  Bukkit features instead.
* Fix the permission map without resorting to injection
* Fix CommandMapUtil initialization failure
* Fix class initialization of DummyPermissibleBase